Ecology section updates

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -8658,6 +8658,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\KPZUSXZX\\Stark et al. - 2020 - Reframing tropical savannization linking changes .pdf;C\:\\Users\\Me\\Zotero\\storage\\EQVCLAAY\\ecs2.html}
 }
 
+@article{staudtVerticalStructureEvapotranspiration2011,
+  title = {Vertical Structure of Evapotranspiration at a Forest Site (a Case Study)},
+  author = {Staudt, Katharina and Serafimovich, Andrei and Siebicke, Lukas and Pyles, R. David and Falge, Eva},
+  date = {2011-06-15},
+  journaltitle = {Agricultural and Forest Meteorology},
+  series = {Special {{Issue}} on {{Atmospheric Transport}} and {{Chemistry}} in {{Forest Ecosystems}}},
+  volume = {151},
+  number = {6},
+  pages = {709--729},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2010.10.009},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192310002844},
+  urldate = {2021-07-27},
+  abstract = {The components of ecosystem evapotranspiration of a Norway spruce forest (Picea abies L.) as well as the vertical structure of canopy evapotranspiration were analyzed with a combination of measurements and models for a case study of 5 days in September 2007. Eddy-covariance and sap flux measurements were performed at several heights within the canopy at the FLUXNET site Waldstein–Weidenbrunnen (DE-Bay) in the Fichtelgebirge mountains in Germany. Within and above canopy fluxes were simulated with two stand-scale models, the 1D multilayer model ACASA that includes a third-order turbulence closure and the 3D model STANDFLUX. The soil and understory evapotranspiration captured with the eddy-covariance system in the trunk space constituted 10\% of ecosystem evapotranspiration measured with the eddy-covariance system above the canopy. A comparison of transpiration measured with the sap flux technique and inferred from below and above canopy eddy-covariance systems revealed higher estimates from eddy-covariance measurements than for sap flux measurements. The relative influences of possible sources of this mismatch, such as the assumption of negligible contribution of evaporation from intercepted water, and differences between the eddy-covariance flux footprint and the area used for scaling sap flux measurements, were discussed. Ecosystem evapotranspiration as well as canopy transpiration simulated with the two models captured the dynamics of the measurements well, but slightly underestimated eddy-covariance values. Profile measurements and models also gave us the chance to assess in-canopy profiles of canopy evapotranspiration and the contributions of in-canopy layers. For daytime and a coupled or partly coupled canopy, mean simulated profiles of both models agreed well with eddy-covariance measurements, with a similar performance of the ACASA and the STANDFLUX model. Both models underestimated profiles for nighttime and decoupled conditions. During daytime, the upper half of the canopy contributed approximately 80\% to canopy evapotranspiration, whereas during nighttime the contribution shifted to lower parts of the canopy.},
+  langid = {english},
+  keywords = {Eddy-covariance,Evapotranspiration,In-canopy profiles,L.,Model,Sap flux}
+}
+
 @article{sterckCrownDevelopmentTropical2001,
   title = {Crown Development in Tropical Rain Forest Trees: Patterns with Tree Height and Light Availability},
   shorttitle = {Crown Development in Tropical Rain Forest Trees},
