--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -364,26 +364,13 @@ Potential mechanisms for these patterns include stifling of understory ??E under
 ### C and water flux
 
 **Canopy trees account for the majority of forest ecosystem water and carbon cycling.**
+While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration (Fig 5a). In terms of C cycling, it has been estimated that canopy strata contribute ???64% of net daytime $CO_{2}$ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. Large trees also dominate in terms of woody aboveground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees ???10cm DBH usually contributing > 85% of ANPPwoody and Mwoody across 25 globally distributed forests (Fig. 5b, Piponiot et al., accepted). 
 
-- ET: "Leaf-scale properties and processes aggregate non-linearly  in vertical and horizontal space, influencing stand-level ecosystem processes, and in turn biosphere-atmosphere exchanges of water, carbon, energy, and trace gases. As described above, variation in temperature across vertical gradients can interact with local light conditions and other vertically varying meteorological conditions to affect species composition (e.g., see @nakamuraForestsTheirCanopies2017), leaf traits, and photosynthesis . Linked to this local biophysical variation is the partitioning of evapotranspiration ($ET$) into soil evaporation, canopy evaporation, and transpiration, which occur across varying spatiotemporal scales depending on light availability, water stress, stomatal physiology, and turbulent transfer (Lawrence et al. 2007, Staudt et al. 2011). Vertical microclimate gradients interact with vertical variation in foliage density, influencing not only the location of evapotranspiration in the canopy, but also differences in rates and net gross primary productivity ($GPP$, Banerjee & Linn 2018). It has been demonstrated that net carbon assimilation and transpiration can vary substantially for forest canopies with the same LAI but different leaf area density distributions (e.g., Katul et al 2004 , Banerjee & Linn 2018). Further, although transpiration tends to be the dominant component of ET, partitioning is more complex in open canopies where soil evaporation can become more dominant (Baldocchi et al. 2004, Ma et al. 2020), likely affecting vertical thermal gradients. In other words, it matters whether foliage is dense or sparse, and whether it is concentrated higher in the canopy, lower in the canopy, or evenly distributed throughout." *(condense this by quite a lot. I don't think all the info here is necessary)*
-- ET : "Still, partitioning $ET$ into its constituent components, let alone vertically partitioning transpiration rates in the canopy, remains a challenge. Eddy covariance techniques, sap flow measurements, and stable isotope analysis offer useful tools, although errors can be large (Williams et al 2004, Herbst et al. 1996). To date, empirical analyses of ET vertical partitioning and interactions with temperature and vegetation structure have be concentrated in midlatitude ecosystems (e.g. Haverd et al 2009, 2011, Staudt et al. 2011, Ringgaard et al. 2014) *(KAT: but see Kunert et al. 2017 -not sure if this is equivalent)*. " - *(revise this to focus on the observed patterns, with at most brief mention of the methods)*
-- GPP : ??
-- $ANPP_{woody}$: Piponiot et al., accepted, @meakemRoleTreeSize2018, New Phyt
+**Include ET figure** Figure 5. Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from (Kunert et al. 2017). I'd like to create a parallel figure for C fluxes. 
 
-**Less clear is how thermal sensitivity varies across strata.**
-
-- ET: "With respect to changing temperatures, the net effect of leaf- and plant-level thermal responses remains an active area of research, including both how vertical variation in thermal sensitivity influences forest ecosystem dynamics and biosphere-atmosphere interactions." 
-- GPP : ??
-- $ANPP_{woody}$: if we scale tree-rings to the ecosystem level, we expect that woody productivity of canopy trees is more sensitive to drought, but perhaps less sensitive to wet heat. More research is needed here. 
-
-
+**It is less clear how thermal sensitivity of water and C fluxes varies across strata, but likely responses can be inferred based on the patterns and mechanisms reviewed above.** We expect that transpiration, GPP, and $ANPP_{woody}$ should all be more sensitive to high temperatures-- at least under conditions of moderate to high VPD. A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an El Nino drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. It remains far less clear how thermal sensitivity is likely to vary across forest strata under wet conditions, but both physiological mechanisms (Fig. 3) and tree ring evidence (Fig. 4) suggests that understory trees may respond more negatively to hot, wet conditions. Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
 
 ## Implications [ & future research directions?]
-
-*Elsa: If emphsaize future research directions, could move the remote sensing opportunities to this section and frame modeling section around opportunities to use models to further explore open questions, scale these findings in space and time, and influence predictions*
-*(In this section, we consider implications of the patterns reviewed above for our understanding of the future of forests--both how we model them and what sorts of responses we can expect under climate change.)*
-
-
 
 Having established how physical conditions and biological form and function vary across vertical gradients, we now turn attention to the implications of these patterns for our understanding of how forest ecosystems may be impacted by global change, and our ability to project this across space and time.
 
@@ -400,11 +387,11 @@ Canopy structure affects understory species composition and soil fertility, whic
 
 ### warming
 
-Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, fluxnet global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]. However, taken into account light-induced lower leaf respiration in the day, partionationing of C losses differ diurnally and seasonally across ecosytems [@keenanWidespreadInhibitionDaytime2019]. However, nitrogen that is particularly essential for plant metabolic processes has also shown to decline in forests with warming [Pam Templer et al.]. Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Further, combination of warm-season associated with increased VPD, along with drought exacerbates tree stress[@parkwilliamsTemperaturePotentDriver2013] leading to mortality [@gouldenCaliforniaForestDieoff2019], with implications for forest structure. [**to include Teskey 2015; Breashers et al. 2021**]
+Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled up to photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, thereby shifting the C balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. However, taken into account light-induced lower leaf respiration in the day, partionationing of C losses differ diurnally and seasonally across ecosystems [@keenanWidespreadInhibitionDaytime2019]. However, nitrogen that is particularly essential for plant metabolic processes has also shown to decline in forests with warming [Pam Templer et al.]. Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Further, combination of warm-season associated with increased VPD, along with drought exacerbates tree stress[@parkwilliamsTemperaturePotentDriver2013] leading to mortality [@gouldenCaliforniaForestDieoff2019], with implications for forest structure. [**to include Teskey 2015; Breashers et al. 2021**]
 
-Feedback loops from loss of big trees through natural or anthropogenic disturbance (e.g.@senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
+Feedback loops from loss of big trees through natural or anthropogenic disturbance (e.g. @senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
 
-In the face of global climate change, resiliency among forests also stand out, such as African rainforests, with canopy trees that are more resilient to warming and drought than other forests [@bennettResistanceAfricanTropical2021]. Increasing temperature acclimation among tropical, temperate and boreal species [@slotGeneralPatternsAcclimation2015; @slotPhotosyntheticPlasticityTropical2021; @wayJustRightTemperature2019; @cunninghamTemperateRainforestTrees2003; @cunninghamTemperateRainforestTrees2003] and recovery from canopy heat stress [@smithEmpiricalEvidenceResilience2020] are other mechanisms that will help forests cope with warming.
+Variation in resistance and resilience among forests may drive different trajectories from the forests in the face of global climate change. For example, African rainforests, with canopy trees that are more resilient to warming and drought than other forests [@bennettResistanceAfricanTropical2021]. Temperature acclimation [@slotGeneralPatternsAcclimation2015; @slotPhotosyntheticPlasticityTropical2021; @wayJustRightTemperature2019; @cunninghamTemperateRainforestTrees2003; @cunninghamTemperateRainforestTrees2003] and recovery from canopy heat stress [@smithEmpiricalEvidenceResilience2020] are other mechanisms that will help forests cope with warming.
 
 *For example, species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase than species with larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].*
 
